default 5 icon in dock use 8x20% for same span of grid icons fix scrollable with to align with grid

--- a/apps/homescreen/style/dock.css
+++ b/apps/homescreen/style/dock.css
@@ -10,7 +10,7 @@
 }
 
 #footer .dockWrapper {
-  width: 175%;
+  width: 160%;
   height: 100%;
 }
 
@@ -26,13 +26,13 @@
 #footer li {
   height: 100%;
   position: relative;
-  width: calc(100% / 7);
+  width: calc(100% / 8);
   float: left;
   text-align: center;
 }
 
 #footer > div.scrollable li {
-	width: 7.2rem;
+	width: 23.2rem;
 }
 
 /* Container -> icon + label */
